# triton-riscv

./: .gitignore  CONTRIBUTING.md  EXPERIMENT.md  INSTALLATION.md  README.md  SECURITY.md  SETUP_GUIDE.md  TRADEMARKS.md  weekly-report.md
.github/workflows/: clang-format.yml  test-plugin.yml
analysis/: README.md
analysis/softmax-llvmir-o0-vs-o2/: buddy-opt.args.txt  ll.ir  ll.mlir  ll.opt.O2.ir  softmax-o2.sig.txt  softmax-pre-vs-o2.diff  softmax-pre.sig.txt  tt.mlir  ttshared.mlir
backend/: compiler.py  driver.py  name.conf
docs/: 02-Implementation.md
experiments/layernorm/: ll.mlir  ttshared.mlir
include/: CMakeLists.txt
lib/AnalysisStructured/: PtrAnalysis.cpp
lib/Sanitizer/: CMakeLists.txt
lib/Transform/: CMakeLists.txt
patches/: 0001-cpu-only-no-nv-amd-backends.patch  triton-cpu-0001-installation.patch
python/examples/: bare_matmul.py  benchmark.py  conftest.py  run_triton_riscv_6ops.py  test_addptr.py  test_blockptr_complex_offset.py  test_early_return.py  test_einsum_qhmd_hmpd_to_qhmp.py  test_gather_scatter.py  test_index_select.py  test_layernorm.py  test_load_2d_tensor_block.py  test_load_2d_tensor_col.py  test_mask.py  test_mask_loop_iter_arg.py  test_matmul.py  test_mm.py  test_modulo.py  test_nested_loops.py  test_performance_correlation.py  (+22 more)
scripts/: apply_patches.sh  bench_matmul_vectorization.py  dump_triton_examples_ir.py  rebuild-triton-riscv.sh  sg2044_run_5ops_tensorfirst.py  sync_triton_shared_compiler.sh  triton-riscv-env.sh
test/: lit.cfg.py
tools/triton-shared-opt/: CMakeLists.txt
triton-san/: README.md  build.sh
(+63 files in other folders)
